@@ -3,6 +3,7 @@ Gaim: The Pimpin' Penguin IM Clone that's good for the soul!
 version 0.68:
 	* Removed the old event system and replaced it with a much better
 	  signal system.
+	* Added plugin dependency support.
 
 version 0.67 (08/14/2003):
 	* Brought back the message notification plugin (Brian Tarricone)
